- Refactored injection mechanism a bit, the responsibility for determining TextRanges is replaced to the host element based on the meta-type - Included markdown descriptions for Builtin